GPU HANG: ecode 12:1:859ffffb (Resetting rcs0 for stopped heartbeat on rcs0) - reproducible
System information
Please post inxi -GSC -xx
output (fenced with triple backticks) OR fill information below manually
System:
Host: NUC11PAHi5 Kernel: 5.15.0-56-generic x86_64 bits: 64
compiler: N/A Desktop: Gnome 3.36.9 wm: gnome-shell dm: GDM3
Distro: Ubuntu 20.04.5 LTS (Focal Fossa)
CPU:
Topology: Quad Core model: 11th Gen Intel Core i5-1135G7 bits: 64
type: MT MCP arch: Tiger Lake rev: 1 L2 cache: 8192 KiB
flags: avx avx2 lm nx pae sse sse2 sse3 sse4_1 sse4_2 ssse3 vmx
bogomips: 38707
Speed: 755 MHz min/max: 400/2400 MHz Core speeds (MHz): 1: 618 2: 1042
3: 1348 4: 1363 5: 1476 6: 1385 7: 1234 8: 1344
Graphics:
Device-1: Intel driver: i915 v: kernel bus ID: 00:02.0 chip ID: 8086:9a49
Display: x11 server: X.Org 1.20.13 driver: i915 compositor: gnome-shell
resolution: 1920x1080~60Hz
OpenGL: renderer: Mesa Intel Xe Graphics (TGL GT2)
v: 4.6 Mesa 22.3.0 - kisak-mesa PPA direct render: Yes
Describe the issue
I am having a very reproducible rcs0 related hangs. I think it is related to:
There are comments to suggest that the latest 22.3 version of mesa should rectify the hangs. But it is still present in my case.
Steps to reproduce
- Clone and build Pangolin https://github.com/stevenlovegrove/Pangolin
- Run their examples
- While most other examples would run normally (interactive window opens normally),
SimplePlot
github would cause hangs
Log files as attachment
commandline output
~/git/Pangolin/build/examples/SimplePlot$ ./SimplePlot
Aborted (core dumped)
dmesg output (after each crash)
[ 385.163843] i915 0000:00:02.0: [drm] GPU HANG: ecode 12:1:859ffffb, in SimplePlot [7559]
[ 385.164864] i915 0000:00:02.0: [drm] Resetting rcs0 for stopped heartbeat on rcs0
[ 385.164898] i915 0000:00:02.0: [drm] SimplePlot[7559] context reset due to GPU hang
[ 396.147188] Asynchronous wait on fence 0000:00:02.0:gnome-shell[2021]:31ae timed out (hint:intel_atomic_commit_ready [i915])
[ 400.011936] i915 0000:00:02.0: [drm] GPU HANG: ecode 12:1:859ffffb, in SimplePlot [7559]
[ 400.012959] i915 0000:00:02.0: [drm] Resetting rcs0 for stopped heartbeat on rcs0
[ 400.012997] i915 0000:00:02.0: [drm] SimplePlot[7559] context reset due to GPU hang
[ 410.995185] Asynchronous wait on fence 0000:00:02.0:gnome-shell[2021]:31b2 timed out (hint:intel_atomic_commit_ready [i915])
[ 415.116038] i915 0000:00:02.0: [drm] GPU HANG: ecode 12:1:859ffffb, in SimplePlot [7559]
[ 415.117061] i915 0000:00:02.0: [drm] Resetting rcs0 for stopped heartbeat on rcs0
[ 415.117106] i915 0000:00:02.0: [drm] SimplePlot[7559] context reset due to GPU hang
Any extra information would be greatly appreciated
The same issue also present on my other Dell laptop, which is running on mesa 21.2.6.